--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,12 @@
     <string name="main_fragment">main_fragment</string>
     <string name="grid_view">Grid View</string>
     <string name="list_view">List View</string>
+    <string name="scary_stuff">Scary Stuff</string>
+    <string name="delete_projects_title">Delete All Projects</string>
+    <string name="delete_projects_summary">Warning: Deletes all projects within this app. Once done this is irreversible.</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
 </resources>
