--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,40 +1,28 @@
 <resources>
     <string name="app_name">Project Counter</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
     <string name="project_name">Project Name</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
     <string name="add_new_project">Add New Project</string>
+    <string name="settings">Settings</string>
     <string name="cancel_dialog">Are you sure you wish to cancel?</string>
     <string name="ok">OK</string>
     <string name="back">Back</string>
+
     <!-- Preference Titles -->
     <string name="general_header">General</string>
-    <string name="sync_header">Sync</string>
+    <string name="scary_stuff_header">Scary Stuff</string>
 
     <!-- General Preferences -->
     <string name="add_example_project_title">Add Example Project</string>
-    <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="main_fragment">main_fragment</string>
     <string name="grid_view">Grid View</string>
     <string name="list_view">List View</string>
-    <string name="scary_stuff">Scary Stuff</string>
     <string name="delete_projects_title">Delete All Projects</string>
     <string name="delete_projects_summary">Warning: Deletes all projects within this app. Once done this is irreversible.</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="settings">Settings</string>
+    <string name="time">Time</string>
+    <string name="default_time">0:00:00</string>
 </resources>
