--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="delete_projects_summary">Warning: Deletes all projects within this app. Once done this is irreversible.</string>
     <string name="time">Time</string>
     <string name="default_time">0:00:00</string>
+    <string name="projects_completed">Completed</string>
+    <string name="zero">0</string>
 </resources>
